--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,8 +7,8 @@
 
     <TextView
         android:id="@+id/nombreDos"
-        android:layout_width="261dp"
-        android:layout_height="83dp"
+        android:layout_width="265dp"
+        android:layout_height="62dp"
         android:layout_marginStart="127dp"
         android:layout_marginTop="227dp"
         android:layout_marginEnd="102dp"
@@ -16,17 +16,17 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.658"
+        app:layout_constraintHorizontal_bias="0.65"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.555" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar2"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:layout_marginBottom="163dp"
-        android:background="@android:color/holo_orange_dark"
+        android:background="@android:color/background_dark"
         app:layout_constraintBottom_toTopOf="@+id/nombreDos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -36,15 +36,17 @@
 
     <ImageView
         android:id="@+id/fotomono"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="231dp"
+        android:layout_height="232dp"
         android:layout_marginStart="141dp"
         android:layout_marginTop="79dp"
         android:layout_marginEnd="142dp"
         android:layout_marginBottom="223dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nombreDos"
+        app:layout_constraintVertical_bias="0.0"
         tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
